[gd_scene load_steps=16 format=3 uid="uid://susgu2kqchq5"]

[ext_resource type="Script" path="res://actors/Enemies/enemy_spawner.gd" id="1_y77xf"]
[ext_resource type="Script" path="res://Shared_scripts/StateScripts/stopped.gd" id="2_lham6"]
[ext_resource type="Script" path="res://Shared_scripts/StateScripts/spawning.gd" id="3_rkabo"]
[ext_resource type="Texture2D" uid="uid://bnd0vlq22bpu4" path="res://Assets/Player.png" id="5_hpp0o"]
[ext_resource type="Texture2D" uid="uid://i2xbtmvtcqen" path="res://Assets/spr_campfire_idle.png" id="5_xplmh"]
[ext_resource type="Texture2D" uid="uid://dmjrp3wfcqocn" path="res://Assets/spr_campfire_starting.png" id="6_kl8u4"]
[ext_resource type="Texture2D" uid="uid://6381jpit5vqg" path="res://Assets/spr_campfire_burning.png" id="7_683la"]

[sub_resource type="CanvasTexture" id="CanvasTexture_hqlfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_in83e"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_gksoo"]
radius = 50.0

[sub_resource type="Animation" id="Animation_yl2sv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_xplmh")]
}

[sub_resource type="Animation" id="Animation_g0y4s"]
resource_name = "fire_idle"
length = 0.750013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.125),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_xplmh")]
}

[sub_resource type="Animation" id="Animation_utvhj"]
resource_name = "fire_on"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_683la")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_sy5dc"]
resource_name = "fire_start"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FireSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_kl8u4")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6sxve"]
_data = {
"RESET": SubResource("Animation_yl2sv"),
"fire_idle": SubResource("Animation_g0y4s"),
"fire_on": SubResource("Animation_utvhj"),
"fire_start": SubResource("Animation_sy5dc")
}

[node name="EnemySpawner" type="CharacterBody2D" node_paths=PackedStringArray("initial_state")]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_y77xf")
initial_state = NodePath("States/Spawning")

[node name="MainSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
scale = Vector2(15, 15)
texture = SubResource("CanvasTexture_hqlfj")

[node name="MainCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_in83e")

[node name="States" type="Node" parent="."]

[node name="Stopped" type="Node" parent="States"]
script = ExtResource("2_lham6")

[node name="Spawning" type="Node" parent="States"]
script = ExtResource("3_rkabo")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_gksoo")

[node name="CharacterSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_hpp0o")
flip_h = true
hframes = 6
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6sxve")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="FireSprite" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("5_xplmh")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
